# uglibs

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.org  conanfile.py  conanfile.txt
libs/containers/: CMakeLists.txt
libs/containers/cmake/: config.cmake.in
libs/containers/include/containers/: bit-container-adaptor.hpp  bitset.hpp  ring-hash-map.hpp  ring-vector.hpp  run-length-container.hpp  tight-integers-container.hpp
libs/containers/tests/: bit-container-adaptor.cpp  bitset.cpp  ring-hash-map.cpp  ring-vector.cpp  run-length-container.cpp  tight-integer-container.cpp
libs/gmt/: CMakeLists.txt
libs/gmt/cmake/: config.cmake.in
libs/gmt/include/gmt/: cross-product.hpp  distance.hpp  embedded-point.hpp  mat-inversion.hpp  mat.hpp  misc.hpp  point-operations.hpp  point-promotion.hpp  point.hpp  sphere.hpp  vector.hpp
libs/gmt/tests/: cross-product.cpp  embedded-point.cpp  mat-inversion.cpp  mat.cpp  point.cpp
libs/graphics/: .gitignore  CMakeLists.txt  app.cpp  app.hpp  ball2d-render.cpp  ball2d-render.hpp  component-manager.cpp  component-manager.hpp  component.cpp  component.hpp  grid2d-render.cpp  grid2d-render.hpp  misc.cpp  misc.hpp  opengl-error.hpp  orthographic-zoom.cpp  program.cpp  program.hpp  render.cpp  shader.cpp  shader.hpp  square-render.cpp  texture2d.cpp  texture2d.hpp  translation2d.cpp  vao.cpp  vao.hpp
libs/graphics/cmake/: config.cmake.in
libs/graphics/include/ug/graphics/: app.hpp  app2d.hpp  app3d.hpp  ball2d-render.hpp  basic-texture.hpp  buffer-texture.hpp  buffers.hpp  camera.hpp  camera2d-controller.hpp  camera3d-controller.hpp  component-manager.hpp  component.hpp  grid2d-render.hpp  inputs.hpp  light3d.hpp  mesh3d-render.hpp  mesh3d.hpp  misc.hpp  opengl-error.hpp  orthographic-zoom.hpp  program.hpp  render.hpp  scene.hpp  segment2d-render.hpp  shader.hpp  square-render.hpp  texture1d.hpp  texture2d.hpp  translation2d.hpp  vao.hpp  window.hpp
libs/graphics/include/uge/graphics/: app.hpp  ball2d-render.hpp  buffers.hpp  grid2d-render.hpp  render.hpp  shader.hpp  square-render.hpp  translation2d.hpp
libs/graphics/src/: app.cpp  app2d.cpp  app3d.cpp  ball2d-render.cpp  basic-texture.cpp  buffer-texture.cpp  buffers.cpp  camera.cpp  camera2d-controller.cpp  camera3d-controller.cpp  component-manager.cpp  component.cpp  grid2d-render.cpp  mesh3d-render.cpp  mesh3d.cpp  misc.cpp  opengl-error.cpp  orthographic-zoom.cpp  program.cpp  render.cpp  scene.cpp  segment2d-render.cpp  shader.cpp  square-render.cpp  texture1d.cpp  texture2d.cpp  translation2d.cpp  vao.cpp  window.cpp
libs/graphics/test/: hello-cube.cpp  hello-scene.cpp  hello-segment.cpp  raymarching-primitives.cpp
libs/graphics/test/hello-graphics/: CMakeLists.txt  main.cpp
libs/graphics/tools/cmake/: conan.cmake  glad.cmake  imgui.cmake  warnings.cmake
libs/ia/: CMakeLists.txt
libs/ia/cmake/: config.cmake.in
libs/ia/include/ia/: interval.hpp  operations.hpp  scoped-round-mode.hpp
libs/ia/src/: scoped-round-mode.cpp
libs/ia/tests/: interval.cpp  scoped-round-mode.cpp
libs/util/: CMakeLists.txt
libs/util/cmake/: config.cmake.in
libs/util/include/util/: arithmetic-friends.hpp  bit-adaptors.hpp  bit.hpp  concepts.hpp  container-operations.hpp  cv-adaptors.hpp  fmt.hpp  integer-concepts.hpp  integer-variant.hpp  integers.hpp  io.hpp  log.hpp  meta.hpp  misc-adaptors.hpp  misc.hpp  numeric-computing.hpp  ranges.hpp  run-length-container.hpp  static-string.hpp  static-vector.hpp  underlying-integer.hpp  unsigned-integer.hpp  variant.hpp  views.hpp
libs/util/src/: io.cpp  misc.cpp
libs/util/tests/: arithmetic-friends.cpp  bit-adaptors.cpp  bits.cpp  golden-section-search.cpp  integer-variant.cpp  integers.cpp  merged-variant.cpp  meta.cpp  misc-adaptors.cpp  pairwise-tuple.cpp  run-length-container.cpp  static-string.cpp  variants.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tools/conan/: gcc
